--- a/kaloriz/templates/catalog/about.html
+++ b/kaloriz/templates/catalog/about.html
@@ -133,8 +133,11 @@
             <h5 class="card-title font-weight-bold">Fadhil Aqilah</h5>
             <p class="text-muted mb-2">CEO & Founder</p>
             <div>
-              <a href="#" class="text-primary mx-2"><i class="fab fa-linkedin"></i></a>
-              <a href="#" class="text-info mx-2"><i class="fab fa-twitter"></i></a>
+              <div>
+                <a href="#" class="text-danger mx-2"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="text-info mx-2"><i class="fab fa-twitter"></i></a>
+              </div>
+
             </div>
           </div>
         </div>
@@ -147,9 +150,10 @@
             <h5 class="card-title font-weight-bold">Muh Ashif</h5>
             <p class="text-muted mb-2">Head of Operations</p>
             <div>
-              <a href="#" class="text-primary mx-2"><i class="fab fa-linkedin"></i></a>
+              <a href="https://www.instagram.com/chipo574_/" class="text-danger mx-2"><i class="fab fa-instagram"></i></a>
               <a href="#" class="text-info mx-2"><i class="fab fa-twitter"></i></a>
             </div>
+
           </div>
         </div>
       </div>
@@ -161,8 +165,10 @@
             <h5 class="card-title font-weight-bold">Yudistiro</h5>
             <p class="text-muted mb-2">Head of Technology</p>
             <div>
-              <a href="#" class="text-primary mx-2"><i class="fab fa-linkedin"></i></a>
-              <a href="#" class="text-info mx-2"><i class="fab fa-twitter"></i></a>
+              <div>
+                <a href="#" class="text-danger mx-2"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="text-info mx-2"><i class="fab fa-twitter"></i></a>
+              </div>
             </div>
           </div>
         </div>
@@ -175,8 +181,10 @@
             <h5 class="card-title font-weight-bold">Algifari Rinawan</h5>
             <p class="text-muted mb-2">Head of Marketing</p>
             <div>
-              <a href="#" class="text-primary mx-2"><i class="fab fa-linkedin"></i></a>
-              <a href="#" class="text-info mx-2"><i class="fab fa-twitter"></i></a>
+              <div>
+                <a href="#" class="text-danger mx-2"><i class="fab fa-instagram"></i></a>
+                <a href="#" class="text-info mx-2"><i class="fab fa-twitter"></i></a>
+              </div>
             </div>
           </div>
         </div>
